# netview

./: AGENTS.md  README.md  main.py  pyproject.toml
netview/: __init__.py  networking.py  performance.py  rendering.py
tests/: conftest.py  test_caching.py  test_compression.py  test_keep_alive.py  test_performance.py  test_redirects.py  test_smoke.py
tests/support/: http.py
