[project]
name = "netview"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pyright>=1.1.400",
    "ruff>=0.11.8",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 88
target-version = "py313"

[tool.ruff.lint]
select = [
    "E",
    "F",
    "I",
    "UP",
    "B",
    "SIM",
]

[tool.pyright]
include = ["main.py", "netview", "tests"]
pythonVersion = "3.13"
typeCheckingMode = "strict"
